--- a/packages/studio-base/package.json
+++ b/packages/studio-base/package.json
@@ -101,6 +101,7 @@
     "@types/text-metrics": "workspace:*",
     "@types/three": "^0.140.0",
     "@types/tinycolor2": "1.4.3",
+    "@types/uint32": "0.2.0",
     "@types/url-search-params": "1.1.0",
     "@types/uuid": "8.3.4",
     "@types/wicg-file-system-access": "2020.9.5",
